--- a/City_Scores/City_Scores_API.ipynb
+++ b/City_Scores/City_Scores_API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +436,7 @@
        "[266 rows x 19 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cost of Living Score</th>\n",
+       "      <th>Safety Score</th>\n",
+       "      <th>teleport_city_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>4.015</td>\n",
+       "      <td>9.6165</td>\n",
+       "      <td>65.090000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelaide</td>\n",
+       "      <td>4.692</td>\n",
+       "      <td>7.9260</td>\n",
+       "      <td>61.199865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albuquerque</td>\n",
+       "      <td>6.059</td>\n",
+       "      <td>1.3435</td>\n",
+       "      <td>51.512162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Almaty</td>\n",
+       "      <td>9.333</td>\n",
+       "      <td>7.3090</td>\n",
+       "      <td>52.758243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>3.824</td>\n",
+       "      <td>8.5035</td>\n",
+       "      <td>69.598784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>Winnipeg</td>\n",
+       "      <td>5.882</td>\n",
+       "      <td>6.0155</td>\n",
+       "      <td>57.538108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>Wroclaw</td>\n",
+       "      <td>8.434</td>\n",
+       "      <td>8.1655</td>\n",
+       "      <td>53.167027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>Yerevan</td>\n",
+       "      <td>9.431</td>\n",
+       "      <td>8.8730</td>\n",
+       "      <td>55.574054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>Zagreb</td>\n",
+       "      <td>7.194</td>\n",
+       "      <td>8.6575</td>\n",
+       "      <td>57.258784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>Zurich</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>9.0665</td>\n",
+       "      <td>68.807973</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>266 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City  Cost of Living Score  Safety Score  teleport_city_score\n",
+       "0         Aarhus                 4.015        9.6165            65.090000\n",
+       "1       Adelaide                 4.692        7.9260            61.199865\n",
+       "2    Albuquerque                 6.059        1.3435            51.512162\n",
+       "3         Almaty                 9.333        7.3090            52.758243\n",
+       "4      Amsterdam                 3.824        8.5035            69.598784\n",
+       "..           ...                   ...           ...                  ...\n",
+       "261     Winnipeg                 5.882        6.0155            57.538108\n",
+       "262      Wroclaw                 8.434        8.1655            53.167027\n",
+       "263      Yerevan                 9.431        8.8730            55.574054\n",
+       "264       Zagreb                 7.194        8.6575            57.258784\n",
+       "265       Zurich                 1.000        9.0665            68.807973\n",
+       "\n",
+       "[266 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "columns_to_keep = ['City', 'Cost of Living Score', 'Safety Score', 'teleport_city_score']\n",
+    "\n",
+    "\n",
+    "df = df[columns_to_keep]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
