--- a/City_Scores/City_Scores_API.ipynb
+++ b/City_Scores/City_Scores_API.ipynb
@@ -628,11 +628,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"city_scores.csv\")"
+    "df.to_csv(\"city_scores.csv\", index=False)"
    ]
   }
  ],
