--- a/City_Scores/City_Scores_API.ipynb
+++ b/City_Scores/City_Scores_API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
        "[266 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,11 +628,485 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"city_scores.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cost of Living Score</th>\n",
+       "      <th>Safety Score</th>\n",
+       "      <th>teleport_city_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>4.015</td>\n",
+       "      <td>9.6165</td>\n",
+       "      <td>65.090000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelaide</td>\n",
+       "      <td>4.692</td>\n",
+       "      <td>7.9260</td>\n",
+       "      <td>61.199865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albuquerque</td>\n",
+       "      <td>6.059</td>\n",
+       "      <td>1.3435</td>\n",
+       "      <td>51.512162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Almaty</td>\n",
+       "      <td>9.333</td>\n",
+       "      <td>7.3090</td>\n",
+       "      <td>52.758243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>3.824</td>\n",
+       "      <td>8.5035</td>\n",
+       "      <td>69.598784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>Winnipeg</td>\n",
+       "      <td>5.882</td>\n",
+       "      <td>6.0155</td>\n",
+       "      <td>57.538108</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>Wroclaw</td>\n",
+       "      <td>8.434</td>\n",
+       "      <td>8.1655</td>\n",
+       "      <td>53.167027</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>Yerevan</td>\n",
+       "      <td>9.431</td>\n",
+       "      <td>8.8730</td>\n",
+       "      <td>55.574054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>Zagreb</td>\n",
+       "      <td>7.194</td>\n",
+       "      <td>8.6575</td>\n",
+       "      <td>57.258784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>Zurich</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>9.0665</td>\n",
+       "      <td>68.807973</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>266 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City  Cost of Living Score  Safety Score  teleport_city_score\n",
+       "0         Aarhus                 4.015        9.6165            65.090000\n",
+       "1       Adelaide                 4.692        7.9260            61.199865\n",
+       "2    Albuquerque                 6.059        1.3435            51.512162\n",
+       "3         Almaty                 9.333        7.3090            52.758243\n",
+       "4      Amsterdam                 3.824        8.5035            69.598784\n",
+       "..           ...                   ...           ...                  ...\n",
+       "261     Winnipeg                 5.882        6.0155            57.538108\n",
+       "262      Wroclaw                 8.434        8.1655            53.167027\n",
+       "263      Yerevan                 9.431        8.8730            55.574054\n",
+       "264       Zagreb                 7.194        8.6575            57.258784\n",
+       "265       Zurich                 1.000        9.0665            68.807973\n",
+       "\n",
+       "[266 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#open CSV file and read data\n",
+    "df = open(\"city_scores.csv\", \"r\")\n",
+    "df = pd.read_csv(df)\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>56.149628</td>\n",
+       "      <td>10.213405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelaide</td>\n",
+       "      <td>-34.928181</td>\n",
+       "      <td>138.599931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albuquerque</td>\n",
+       "      <td>35.084103</td>\n",
+       "      <td>-106.650985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Almaty</td>\n",
+       "      <td>43.236392</td>\n",
+       "      <td>76.945728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>52.373080</td>\n",
+       "      <td>4.892453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>Winnipeg</td>\n",
+       "      <td>49.895537</td>\n",
+       "      <td>-97.138458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>Wroclaw</td>\n",
+       "      <td>51.108978</td>\n",
+       "      <td>17.032669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>Yerevan</td>\n",
+       "      <td>40.177711</td>\n",
+       "      <td>44.512623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>Zagreb</td>\n",
+       "      <td>45.842641</td>\n",
+       "      <td>15.962231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>Zurich</td>\n",
+       "      <td>47.374449</td>\n",
+       "      <td>8.541042</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>266 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City   Latitude   Longitude\n",
+       "0         Aarhus  56.149628   10.213405\n",
+       "1       Adelaide -34.928181  138.599931\n",
+       "2    Albuquerque  35.084103 -106.650985\n",
+       "3         Almaty  43.236392   76.945728\n",
+       "4      Amsterdam  52.373080    4.892453\n",
+       "..           ...        ...         ...\n",
+       "261     Winnipeg  49.895537  -97.138458\n",
+       "262      Wroclaw  51.108978   17.032669\n",
+       "263      Yerevan  40.177711   44.512623\n",
+       "264       Zagreb  45.842641   15.962231\n",
+       "265       Zurich  47.374449    8.541042\n",
+       "\n",
+       "[266 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from geopy.geocoders import Nominatim\n",
+    "name=[]\n",
+    "Lan=[]\n",
+    "Long=[]\n",
+    "for city_name in city_names:\n",
+    "    # Replace with the desired city name\n",
+    "\n",
+    "    geolocator = Nominatim(user_agent=\"my-app\")\n",
+    "    location = geolocator.geocode(city_name)\n",
+    "\n",
+    "    if location is not None:\n",
+    "\n",
+    "        latitude = location.latitude\n",
+    "        longitude = location.longitude\n",
+    "        name.append(city_name)\n",
+    "        Lan.append(latitude)\n",
+    "        Long.append(longitude)\n",
+    "\n",
+    "    else:\n",
+    "        print(\"City {city_name} not found.\")\n",
+    "City_location=pd.DataFrame({'City':name,'Latitude':Lan,'Longitude':Long})\n",
+    "\n",
+    "display(City_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cost of Living Score</th>\n",
+       "      <th>Safety Score</th>\n",
+       "      <th>teleport_city_score</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aarhus</td>\n",
+       "      <td>4.015</td>\n",
+       "      <td>9.6165</td>\n",
+       "      <td>65.090000</td>\n",
+       "      <td>56.149628</td>\n",
+       "      <td>10.213405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelaide</td>\n",
+       "      <td>4.692</td>\n",
+       "      <td>7.9260</td>\n",
+       "      <td>61.199865</td>\n",
+       "      <td>-34.928181</td>\n",
+       "      <td>138.599931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albuquerque</td>\n",
+       "      <td>6.059</td>\n",
+       "      <td>1.3435</td>\n",
+       "      <td>51.512162</td>\n",
+       "      <td>35.084103</td>\n",
+       "      <td>-106.650985</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Almaty</td>\n",
+       "      <td>9.333</td>\n",
+       "      <td>7.3090</td>\n",
+       "      <td>52.758243</td>\n",
+       "      <td>43.236392</td>\n",
+       "      <td>76.945728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Amsterdam</td>\n",
+       "      <td>3.824</td>\n",
+       "      <td>8.5035</td>\n",
+       "      <td>69.598784</td>\n",
+       "      <td>52.373080</td>\n",
+       "      <td>4.892453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>261</th>\n",
+       "      <td>Winnipeg</td>\n",
+       "      <td>5.882</td>\n",
+       "      <td>6.0155</td>\n",
+       "      <td>57.538108</td>\n",
+       "      <td>49.895537</td>\n",
+       "      <td>-97.138458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>262</th>\n",
+       "      <td>Wroclaw</td>\n",
+       "      <td>8.434</td>\n",
+       "      <td>8.1655</td>\n",
+       "      <td>53.167027</td>\n",
+       "      <td>51.108978</td>\n",
+       "      <td>17.032669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>263</th>\n",
+       "      <td>Yerevan</td>\n",
+       "      <td>9.431</td>\n",
+       "      <td>8.8730</td>\n",
+       "      <td>55.574054</td>\n",
+       "      <td>40.177711</td>\n",
+       "      <td>44.512623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
+       "      <td>Zagreb</td>\n",
+       "      <td>7.194</td>\n",
+       "      <td>8.6575</td>\n",
+       "      <td>57.258784</td>\n",
+       "      <td>45.842641</td>\n",
+       "      <td>15.962231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>265</th>\n",
+       "      <td>Zurich</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>9.0665</td>\n",
+       "      <td>68.807973</td>\n",
+       "      <td>47.374449</td>\n",
+       "      <td>8.541042</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>266 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            City  Cost of Living Score  Safety Score  teleport_city_score  \\\n",
+       "0         Aarhus                 4.015        9.6165            65.090000   \n",
+       "1       Adelaide                 4.692        7.9260            61.199865   \n",
+       "2    Albuquerque                 6.059        1.3435            51.512162   \n",
+       "3         Almaty                 9.333        7.3090            52.758243   \n",
+       "4      Amsterdam                 3.824        8.5035            69.598784   \n",
+       "..           ...                   ...           ...                  ...   \n",
+       "261     Winnipeg                 5.882        6.0155            57.538108   \n",
+       "262      Wroclaw                 8.434        8.1655            53.167027   \n",
+       "263      Yerevan                 9.431        8.8730            55.574054   \n",
+       "264       Zagreb                 7.194        8.6575            57.258784   \n",
+       "265       Zurich                 1.000        9.0665            68.807973   \n",
+       "\n",
+       "      Latitude   Longitude  \n",
+       "0    56.149628   10.213405  \n",
+       "1   -34.928181  138.599931  \n",
+       "2    35.084103 -106.650985  \n",
+       "3    43.236392   76.945728  \n",
+       "4    52.373080    4.892453  \n",
+       "..         ...         ...  \n",
+       "261  49.895537  -97.138458  \n",
+       "262  51.108978   17.032669  \n",
+       "263  40.177711   44.512623  \n",
+       "264  45.842641   15.962231  \n",
+       "265  47.374449    8.541042  \n",
+       "\n",
+       "[266 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#merge df with city_location based on city_name\n",
+    "merged_df = pd.merge(df, City_location, on='City')\n",
+    "merged_df"
    ]
   }
  ],
